# pudl-usage-metrics

./: .bandit.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  run_data_update.py  schedule_run_config.yml  setup.py  tox.ini  workspace.yaml
.github/: FUNDING.yml
.github/workflows/: eqr-bizdev.yml  load-metrics.yml  nightly.yml  save-harvest-data.yml  save_daily_metrics.yml  save_github_metrics.yml  tox-pytest.yml
dagster_home/: dagster.yaml
eqr-bizdev/: 2022-02-23-eqr-bizdev.txt  2022-02-24-eqr-bizdev.txt  2022-02-25-eqr-bizdev.txt  2022-02-26-eqr-bizdev.txt  2022-02-27-eqr-bizdev.txt  2022-02-28-eqr-bizdev.txt  2022-03-01-eqr-bizdev.txt  2022-03-02-eqr-bizdev.txt  2022-03-03-eqr-bizdev.txt  2022-03-04-eqr-bizdev.txt  2022-03-05-eqr-bizdev.txt  2022-03-06-eqr-bizdev.txt  2022-03-07-eqr-bizdev.txt  2022-03-08-eqr-bizdev.txt  2022-03-09-eqr-bizdev.txt  2022-03-10-eqr-bizdev.txt  2022-03-11-eqr-bizdev.txt  2022-03-12-eqr-bizdev.txt  2022-03-13-eqr-bizdev.txt  2022-03-14-eqr-bizdev.txt  2022-03-15-eqr-bizdev.txt  2022-03-16-eqr-bizdev.txt  2022-03-17-eqr-bizdev.txt  2022-03-18-eqr-bizdev.txt  2022-03-19-eqr-bizdev.txt  2022-03-20-eqr-bizdev.txt  2022-03-21-eqr-bizdev.txt  2022-03-22-eqr-bizdev.txt  2022-03-23-eqr-bizdev.txt  2022-03-24-eqr-bizdev.txt  2022-03-25-eqr-bizdev.txt  2022-03-26-eqr-bizdev.txt  2022-03-27-eqr-bizdev.txt  2022-03-28-eqr-bizdev.txt  2022-03-29-eqr-bizdev.txt  2022-03-30-eqr-bizdev.txt  2022-03-31-eqr-bizdev.txt  2022-04-01-eqr-bizdev.txt  2022-04-02-eqr-bizdev.txt  2022-04-03-eqr-bizdev.txt  (+2 more)
migrations/: env.py
migrations/versions/: 04c9eac7dc98_add_session_id_to_core_eel_hole_tables_.py  0d362f2deb28_add_core_kaggle_table.py  0fb2e639d75b_test.py  1097f31cdffb_add_my_cool_new_core_zenodo_logs_table.py  1097f31cdffb_edit_my_cool_new_table.py  125d095ac7e2_add_normalized_downloads_and_categorize_.py  18aca676b08b_add_my_cool_new_user_domain_column.py  18bd64751e00_add_core_eel_hole_logs_table.py  23e83521c288_create_initial_schema.py  324a4c7b342c_create_core_zenodo_log_table.py  68374d2f6f62_create_zenodo_log_table.py  764314d4f278_add_core_github_tables.py  8bef33036a50_add_eel_hole_tables.py  96be72d620af_create_initial_migration.py  a7d9118e9b0d_add_pull_requests_to_github_forks_table.py  a9524eefb534_add_sixth_filter_field.py  a9e42f89049f_add_core_eel_hole_logs_table.py  b4fee22b4a4d_create_core_zenodo_table.py  bb5b305691a3_add_session_id_to_core_eel_hole_tables_.py  c061c57b05ba_add_my_cool_new_software_hash_id_column.py  c5dad3be2148_add_session_id_to_core_eel_hole_tables_.py  c8f3f66f6349_update_eel_hole_tables_to_include_user_.py  e5dc00546030_initial_migration_of_database_metadata.py  e8435a653eb2_recreate_first_migration.py  f127226cf7df_add_partition_key_column.py  f3ce52f756e0_update_eel_hole_tables_with_user_id_info.py  f5dbba621bb1_add_out_zenodo_logs.py
notebooks/: analyze_s3_logs.py  auth_tests.ipynb  cloud_sql_connection.ipynb  datasette_analysis.ipynb  datasette_types.ipynb  github_metrics.ipynb  inspect-assets.ipynb  quick-s3-logs-analysis.ipynb
notebooks/.ipynb_checkpoints/: github_metrics-checkpoint.ipynb
notebooks/old_intake_logs/: clean_old_intake_logs.json  downloaded-logs-20220707-173840.json  nld_clean_old_intake_logs.json  old_intake_logs.ipynb
scripts/: eqr-bizdev.sh  harvest_to_gspread.py  save_github_metrics.py
src/bizops/: __init__.py  bizops.py
src/usage_metrics/: __init__.py  helpers.py  models.py  repository.py
src/usage_metrics/core/: __init__.py  eel_hole.py  github.py  github_nonpartitioned.py  github_partitioned.py  kaggle.py  s3.py  zenodo.py
src/usage_metrics/etl/: __init__.py
src/usage_metrics/extract/: s3.py
src/usage_metrics/jobs/: datasette.py  intake.py
src/usage_metrics/ops/: datasette.py  intake.py
src/usage_metrics/raw/: __init__.py  eel_hole.py  extract.py  github.py  github_nonpartitioned.py  github_partitioned.py  kaggle.py  s3.py  zenodo.py
src/usage_metrics/resources/: duckdb.py  parquet_io_manager.py  postgres.py  sqldatabase.py  sqlite.py
src/usage_metrics/schedules/: __init__.py
src/usage_metrics/scripts/: __init__.py  save_github_metrics.py  save_kaggle_metrics.py  save_s3_file_size_metrics.py  save_zenodo_metrics.py
src/usage_metrics/sensors/: __init__.py
src/usage_metrics/transform/: s3.py
tests/: conftest.py
tests/test_graphs/: __init__.py  datasette_job_test.py  intake_job_test.py
tests/unit/: helpers_test.py  resources_test.py
usage_metrics/: .env  Dockerfile  Makefile  README.md  dagster.yaml  default.env  docker-compose.yaml  requirements.txt  setup.py  usage_metrics_vars.env
usage_metrics/dagster_home/: dagster.yaml
usage_metrics/notebooks/: datasette_analysis.ipynb  datasette_types.ipynb
usage_metrics/src/usage_metrics/: helpers.py  models.py  repository.py
usage_metrics/src/usage_metrics/jobs/: __init__.py  datasette.py
usage_metrics/src/usage_metrics/ops/: __init__.py  datasette.py
usage_metrics/src/usage_metrics/resources/: sqlite.py
usage_metrics/src/usage_metrics/schemas/: datasette.py
usage_metrics/usage_metrics/: __init__.py  helpers.py  repository.py
usage_metrics/usage_metrics/assets/: datasette.py
usage_metrics/usage_metrics/jobs/: datasette.py  say_hello.py
usage_metrics/usage_metrics/ops/: datasette.py
usage_metrics/usage_metrics/resources/: postgres.py  sqlite.py
usage_metrics/usage_metrics/schedules/: my_hourly_schedule.py
usage_metrics/usage_metrics/schemas/: datasette.py
usage_metrics/usage_metrics/sensors/: my_sensor.py
usage_metrics/usage_metrics_tests/: __init__.py  conftest.py
usage_metrics/usage_metrics_tests/test_graphs/: test_datasette_job.py  test_say_hello.py
usage_metrics/usage_metrics_tests/test_ops/: __init__.py  test_hello.py
usage_metrics/usage_metrics_tests/unit/: test_hello.py  test_helpers.py
