[project]
name = "pudl_usage_metrics"
version = "0.1.0"
authors = [{name = "PUDL", email = "pudl@catalyst.coop"}]
requires-python = ">=3.12,<3.13"

# managed by pixi; see tool.pixi.dependencies below
# cloud-sql-python-connector is configured here because we need extras [pg8000].
dependencies = ["cloud-sql-python-connector[pg8000]>=1.11.0"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
pudl_usage_metrics = "pudl_usage_metrics.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/usage_metrics"]

[tool.pixi.workspace]
name = "pudl-usage-metrics"
platforms = ["linux-64", "osx-64", "osx-arm64"]
channels = ["conda-forge"]

[tool.pixi.environments]
default = ["default"]
test = ["test"]

[tool.pixi.dependencies]
pandas = ">=2.2,<3.1"
sqlalchemy = ">=2"
dagster = ">=1.7.15, <1.12.23"
dagster-webserver = ">=1.7.15,<1.13"
pandas-gbq = ">=0.23.1"
pydata-google-auth = ">=1.8.2"
jupyterlab = ">=4.2.3"
psycopg2-binary = ">=2.9.9"
joblib = ">=1.4.2"
matplotlib = ">=3.9.0"
pg8000 = ">=1.31.1"
google-cloud-storage = ">=2.17"
kaggle = ">=1.6.3"
s3fs = ">=2025.10.0"

[tool.pixi.pypi-dependencies]
# Install the local package in editable mode. Assume dependencies are specified either
# above in [tools.pixi.dependencies] (for conda packages) or in this section, if they
# happen to only be available via PyPI.
pudl-usage-metrics = { path = ".", editable = true }
ipinfo = ">=5.0.1"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.tasks]
update_local = { cmd = "dagster dev -m usage_metrics.etl", env = { METRICS_PROD_ENV = "local" } }
update_prod = { cmd = "dagster dev -m usage_metrics.etl", env = { METRICS_PROD_ENV = "prod" } }

[tool.doc8]
max-line-length = 88
ignore-path = ["docs/_build"]

[tool.pytest.ini_options]
testpaths = "./"
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:Creating a LegacyVersion:DeprecationWarning:pkg_resources[.*]",
]
addopts = "--verbose"
log_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = "true"
log_cli_level = "INFO"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]

[tool.ruff]
# Assume Python 3.12
target-version = "py312"
line-length = 88
indent-width = 4
exclude = ["migrations/versions", "*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    # "ARG", # unused arguments
    # "B",  # flake8-bugbear
    "C",   # Limit cyclomatic complexity using mccabe
    "D",   # pydocstyle errors
    "E",   # pycodestyle errors
    "EXE", # executable file issues
    # "ERA", # eradicate: find commented out code
    "F",   # pyflakes
    "I",   # isort
    "ISC", # implicit string concatenation
    "N",   # pep8-naming
    "NPY", # NumPy specific checks
    "PD",  # pandas checks
    "PGH", # pygrep-hooks
    # "PL",  # pylint
    # "PT",  # pytest style
    "PTH", # use pathlib
    "Q",   # flake8-quotes
    "RET", # check return values
    "RSE", # unnecessary parenthises on raised exceptions
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    # "T",   # print statements found
    "UP", # pyupgrade (use modern python syntax)
    "W",  # pycodestyle warnings
]

ignore = [
    "D401",   # Require imperative mood in docstrings.
    "D417",
    "E501",   # Overlong lines.
    "E203",   # Space before ':' (black recommends to ignore)
    "PD003",  # Use of isna rather than isnull
    "PD004",  # Use of notna rather than notnull
    "PD008",  # Use of df.at[] rather than df.loc[]
    "PD010",  # Use of df.stack()
    "PD013",  # Use of df.unstack()
    "PD015",  # Use of pd.merge() rather than df.merge()
    "PD901",  # df as variable name
    "RET504", # Ignore unnecessary assignment before return
    "S101",   # Use of assert
]

# Don't automatically concatenate strings -- sometimes we forget a comma!
unfixable = ["ISC"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]    # Ignore unused imports
"tests/*" = ["D"]

[tool.ruff.lint.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["pydantic.validator", "pydantic.root_validator"]

[tool.ruff.lint.isort]
known-first-party = ["ferc_xbrl_extractor"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"
